make motion groups configurable by host

--- a/config.py.example
+++ b/config.py.example
@@ -4,5 +4,4 @@ PASSWORD="..."
 
 DEFAULT_HOST="hostname for migration from db version < 2"
 
-groups=["group1", "group1"] # kinds of motion
-group_prefix={"group1": "g1", "group2": "g2"} # prefixes for motion identifiers
+GROUP_PREFIX={'hostname': {'group1': 'g1', 'group2': 'g2'}} # motion types and their id-prefixes
