--- a/config.py.example
+++ b/config.py.example
@@ -7,3 +7,5 @@ DEFAULT_HOST="hostname for migration from db version < 2"
 GROUP_PREFIX={'hostname': {'group1': 'g1', 'group2': 'g2'}} # motion types and their id-prefixes
 
 DURATION={'hostname':[3, 7, 14]} # duration period for motions
+
+#DEBUGUSER={'hostname':'username/create:* vote:*'} # remove # at beginning of line to use local debuguser
