--- a/config.py.example
+++ b/config.py.example
@@ -18,3 +18,8 @@ MAX_PROXY=2  # user is allowed to hold up to MAX_PROXY votes
 DURATION={'hostname':[3, 7, 14]} # duration period for motions
 
 #DEBUGUSER={'hostname':'username/create:* vote:*'} # remove # at beginning of line to use local debuguser
+
+LANGUAGES = {
+    'en': 'English',
+    'de': 'Deutsch'
+}
