add: configuration of timespan between entering of two motions
Change-Id: I255f871095479d12a535595647cf8ae6a693f02e

--- a/config.py.example
+++ b/config.py.example
@@ -15,6 +15,8 @@ GROUP_PREFIX={'hostname': {'group1': 'g1', 'group2': 'g2'}} # motion types and t
 
 MAX_PROXY=2  # user is allowed to hold up to MAX_PROXY votes
 
+MOTION_WAIT_MINUTES={'hostname':'1'}  # timespan between the entering of two motions
+
 DURATION={'hostname':[3, 7, 14]} # duration period for motions
 
 #DEBUGUSER={'hostname':'username/create:* vote:*'} # remove # at beginning of line to use local debuguser
